--- a/apps.json
+++ b/apps.json
@@ -5,9 +5,6 @@
     {
       "Packages": [
         {
-          "PackageIdentifier": "Microsoft.VisualStudio.2022.Community"
-        },
-        {
           "PackageIdentifier": "Git.Git"
         },
         {
@@ -30,6 +27,15 @@
         },
         {
           "PackageIdentifier": "Rainmeter.Rainmeter"
+        },
+        {
+          "PackageIdentifier": "Microsoft.VisualStudio.2022.Community"
+        },
+        {
+          "PackageIdentifier": "Google.Chrome"
+        },
+        {
+          "PackageIdentifier": "microsoft.MouseKeyboardCenter"
         }
       ],
       "SourceDetails": {
