--- a/apps.json
+++ b/apps.json
@@ -35,7 +35,7 @@
           "PackageIdentifier": "Google.Chrome"
         },
         {
-          "PackageIdentifier": "microsoft.MouseKeyboardCenter"
+          "PackageIdentifier": "Microsoft.MouseandKeyboardCenter"
         }
       ],
       "SourceDetails": {
